--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -12,7 +12,7 @@
     df = diff
     dc = diff --cached
     who = shortlog -s --
-    lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+    lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cd) %C(bold blue)<%an>%Creset' --abbrev-commit --date=format:"%Y-%m-%d %H:%M"
 [diff]
     tool = vimdiff
 [core]
